# full-stack-fastapi-app

./: .env  .markdownlint.json  .mlc_config.json  CONTRIBUTING.md  MICROSERVICES_SETUP.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: docs-ci.yml
assignment-service/: .env  Dockerfile  pyproject.toml
assignment-service/app/: config.py  database.py  main.py
assignment-service/app/api/routes/: assignments.py
backend/: Dockerfile  pyproject.toml
backend/app/: initial_data.py  models.py
backend/app/alembic/versions/: 0ffe083ef274_clean_up_item_type_data.py  20251025_223506_clean_item_type_values.py  44b6a9196e68_add_item_type_to_item.py  53b4ceec2c65_trim_whitespace_from_item_type.py  a1b2c3d4e5f6_trim_item_type_and_add_check_constraint.py
backend/app/api/routes/: items.py
backend/app/core/: config.py
backend/tests/: test_initial_data.py
backend/tests/api/routes/: test_items.py
backend/tests/utils/: item.py
docs/: intake.yaml
frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  theme.tsx
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: AppBackground.tsx  ItemActionsMenu.tsx  Navbar.tsx  Sidebar.tsx  SidebarItems.tsx
frontend/src/components/Items/: AddItem.tsx  EditItem.tsx  SendForAssignment.tsx
frontend/src/components/UserSettings/: Appearance.tsx
frontend/src/routes/: _layout.tsx  login.tsx  signup.tsx
frontend/src/routes/_layout/: items.tsx
frontend/src/theme/: button.recipe.ts
shared-models/: pyproject.toml
shared-models/shared_models/: models.py
