[project]
name = "app"
version = "0.1.0"
description = "Assignment service for full-stack-fastapi-app"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic>2.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "shared-models",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "ruff<1.0.0,>=0.2.2",
]

[tool.uv.sources]
shared-models = { path = "../shared-models", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]
