[project]
name = "shared-models"
version = "0.1.0"
description = "Shared data models for full-stack-fastapi-app"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic>2.0",
    "email-validator<3.0.0.0,>=2.1.0.post1",
]

[tool.hatch.build.targets.wheel]
packages = ["shared_models"]

[tool.hatch.build.targets.wheel.force-include]
"shared_models/py.typed" = "shared_models/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
